--- a/MK.html
+++ b/MK.html
@@ -117,17 +117,17 @@
                  
 <!--NA1-->
             <div class="col"> 
-                <a href="https://www.etsy.com/MATHIEKNITS/listing/549434246/triangle-shawl-bandana-cowl-knit-unique?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1567639891843" target="_blank">
+                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
                     <div class="newArrivals" id="nA1">
                     <div class="overlay">
                         <div class = "items"></div>
                             <div class = "items head">
-                                <h3>OLINGO</h3>
+                                <h3>ESTUARY</h3>
                                     <hr>
                             </div>
                             <div class = "items price">
                                 <p class = "start"></p>
-                                <p class="new">$88</p>
+                                <p class="new">$78</p>
                             </div>
                             <div class="items cart">
                                 <i class="fa fa-shopping-cart"></i>
@@ -136,17 +136,17 @@
                             </div>
                     </div>
                     <br>
-                        <p id="littleText">✦ OLINGO ✦</p>
+                        <p id="littleText">✦ ESTUARY ✦</p>
                 </div></a>
                 </div>
 <!--NA2-->
             <div class="col"> 
-                <a href="https://www.etsy.com/MATHIEKNITS/listing/629294230/winter-hat-herringbone-hat-beanie?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1567639821688" target="_blank">
+                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
                 <div class="newArrivals" id="nA2">
                     <div class="overlay">
                         <div class = "items"></div>
                         <div class = "items head">
-                            <h3>ZION</h3>
+                            <h3>ANDROMEDA</h3>
                                 <hr>
                         </div>
                         <div class = "items price">
@@ -160,17 +160,41 @@
                         </div>
                     </div>
                         <br>
-                            <p id="littleText">✦ ZION ✦</p>
+                            <p id="littleText">✦ ANDROMEDA ✦</p>
                 </div>
             </div></a>
 <!--NA3-->
             <div class="col"> 
-                <a href="https://www.etsy.com/MATHIEKNITS/listing/643132435/herringbone-cowl-scarf-fringe-neck?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1567639949275" target="_blank">
+                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
                 <div class="newArrivals" id="nA3">
                     <div class="overlay">
                         <div class = "items"></div>
                         <div class = "items head">
-                            <h3>WINTERBERRY</h3>
+                            <h3>HONEY</h3>
+                                <hr>
+                        </div>
+                        <div class = "items price">
+                            <p class = "start"></p>
+                            <p class="new">$45</p>
+                        </div>
+                        <div class="items cart">
+                            <i class="fa fa-shopping-cart"></i>
+                            <span id="textTop">CLICK FOR</span><br>
+                            <span id="textTop">ETSY LISTING</span>
+                        </div>
+                    </div>
+                        <br>
+                            <p id="littleText">✦ HONEY ✦</p>
+                </div>
+            </div></a>
+<!--NA4-->
+            <div class="col"> 
+            <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
+                <div class="newArrivals" id="nA4">
+                    <div class="overlay">
+                        <div class = "items"></div>
+                        <div class = "items head">
+                            <h3>ARBOREAL</h3>
                                 <hr>
                         </div>
                         <div class = "items price">
@@ -184,46 +208,22 @@
                         </div>
                     </div>
                         <br>
-                            <p id="littleText">✦ WINTERBERRY ✦</p>
-                </div>
-            </div></a>
-<!--NA4-->
-            <div class="col"> 
-            <a href="https://www.etsy.com/MATHIEKNITS/listing/629293516/winter-hat-herringbone-hat-beanie?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1567639966636" target="_blank">
-                <div class="newArrivals" id="nA4">
-                    <div class="overlay">
-                        <div class = "items"></div>
-                        <div class = "items head">
-                            <h3>WOODLAND</h3>
-                                <hr>
-                        </div>
-                        <div class = "items price">
-                            <p class = "start"></p>
-                            <p class="new">$58</p>
-                        </div>
-                        <div class="items cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span id="textTop">CLICK FOR</span><br>
-                            <span id="textTop">ETSY LISTING</span>
-                        </div>
-                    </div>
-                        <br>
-                            <p id="littleText">✦ WOODLAND ✦</p>
+                            <p id="littleText">✦ ARBOREAL ✦</p>
                 </div>
             </div></a>
 <!--NA5-->       
                 <div class="col">        
-                <a href="https://www.etsy.com/MATHIEKNITS/listing/629273820/fingerless-gloves-fingerless-mittens?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1567639985031" target="_blank"> 
+                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
                         <div class="newArrivals" id="nA5">
                             <div class="overlay">
                                 <div class = "items"></div>
                                 <div class = "items head">
-                                    <h3>GRIZZLY BEAR</h3>
+                                    <h3>GINSENG</h3>
                                         <hr>
                                 </div>
                                 <div class = "items price">
                                     <p class = "start"></p>
-                                    <p class="new">$45</p>
+                                    <p class="new">$58</p>
                                 </div>
                                 <div class="items cart">
                                     <i class="fa fa-shopping-cart"></i>
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                             <br>
-                                <p id="littleText">✦ GRIZZLY BEAR ✦</p>
+                                <p id="littleText">✦ GINSENG ✦</p>
                         </div>
                 </div></a>
         </div>
@@ -254,9 +254,8 @@
             <div class="row justify-content-center">
                 <div class="col-5" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
-                    <p id="tentative">**TENTATIVE**</p>
-                    <p id="dates">October 27, 2018 ↠ Chic & Unique Market ↠ Shelby Township MI</p>
-                    <p id="dates">December 6, 7, 8, 2018 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</p>
+                    <p id="tentative">**CONFIRMED**</p>
+                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
                     <br>
                 </div>
                 <div class="col-5" id="calRightCol" >
