--- a/MKAbout.html
+++ b/MKAbout.html
@@ -146,9 +146,11 @@
         </div> 
         <div class="row justify-content-center" id="emRow">
             <div id="emImgBox">
-                    <img src="./img/tetonem.jpg" id="emImg">
-                    <img src="./img/tetonem.jpg" id="emImg">
-                    <img src="./img/tetonem.jpg" id="emImg">
+                    <img src="./img/emilyhatb.jpg" id="emImg">
+                    <img src="./img/idk.jpg" id="emImg">
+                    <img src="./img/emilyhat.jpg" id="emImg">
+                    
+                    
                 </div>
             <div class="col-9" id="aboutEMCol">
 
@@ -162,7 +164,7 @@
                     &emsp;Although I have a passion for biology, I have needed to switch gears and currently I am learning how to write & create code through online courses & experimenting with my own projects. I am currently working towards becoming a Web Developer ( this website was one of my first major projects! ), and have an exploratory interest in game design & development. 
                 </p>
                 <p id="infoP">
-                    &emsp;Running, maintaining, & creating for MATHIEKNITS is an enjoyable side project and hobby, and has been increasing in success with each sucessive year. It is something I truly enjoy doing, and is both therapuetic and rewarding.
+                    &emsp;Running, maintaining, & creating for MATHIEKNITS is an enjoyable side project and hobby, and has been increasing in success with each successive year. It is something I truly enjoy doing, and is both therapeutic and rewarding.
                 </p>
                  <p id="infoP">
                     &emsp;A few of my favorite things include a Tiger Salamander named Norbergite, a Hedgehog named Juniper, thunderstorms,  and Worcestershire sauce. I like to spend my time investigating stream beds, watching the Great British Bake Off, listening to podcasts, and of course, knitting.
