--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -113,10 +113,8 @@
             <div class="row justify-content-center">
                 <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p>
-                    <p id="tentative">**TENTATIVE**</p>
-
-                    <p id="dates">October 27, 2018 ↠ Chic & Unique Market ↠ Shelby Township MI</p>
-                    <p id="dates">December 6, 7, 8, 2018 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</p>
+                    <p id="tentative">**CONFIRMED**</p>
+                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
                 </div>
                 <div class="col-4" id="calRightCol" >
                     <p id="calHead"> PAST EVENTS </p>
