--- a/MK.html
+++ b/MK.html
@@ -247,6 +247,9 @@
             <br>
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
+                    <a href="https://detroiturbancraftfair.com/" target="_blank"><img src ="./img/unnamed.jpg"></a>
+                    <br>
+                    <br>
                     <h1>↠ EVENTS ↞</h1>
                         <hr id="eventHr">
                 </div>
