--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -108,6 +108,8 @@
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
                     <h1>↠ EVENTS ↞</h1>
+                    <br>
+                    <a href="https://detroiturbancraftfair.com/" target="_blank"><img src ="./img/unnamed.jpg"></a>
                </div>
             </div>
             <div class="row justify-content-center">
