--- a/MK.html
+++ b/MK.html
@@ -67,7 +67,10 @@
             <li>
                 &nbsp;&nbsp;<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>&nbsp;&nbsp;
             </li>
+            <br>
+            <img src='./img/mklogoshadowdark.png' id="headerLogo">
         </ul>
+
     </div>
 </nav>
 
@@ -122,12 +125,12 @@
                     <div class="overlay">
                         <div class = "items"></div>
                             <div class = "items head">
-                                <h3>ESTUARY</h3>
+                                <h3>SAGEBRUSH</h3>
                                     <hr>
                             </div>
                             <div class = "items price">
                                 <p class = "start"></p>
-                                <p class="new">$78</p>
+                                <p class="new">$45</p>
                             </div>
                             <div class="items cart">
                                 <i class="fa fa-shopping-cart"></i>
@@ -136,13 +139,37 @@
                             </div>
                     </div>
                     <br>
-                        <p id="littleText">✦ ESTUARY ✦</p>
+                        <p id="littleText">✦ SAGEBRUSH ✦</p>
                 </div></a>
                 </div>
 <!--NA2-->
             <div class="col"> 
                 <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
                 <div class="newArrivals" id="nA2">
+                    <div class="overlay">
+                        <div class = "items"></div>
+                        <div class = "items head">
+                            <h3>HONEY BADGER</h3>
+                                <hr>
+                        </div>
+                        <div class = "items price">
+                            <p class = "start"></p>
+                            <p class="new">$78</p>
+                        </div>
+                        <div class="items cart">
+                            <i class="fa fa-shopping-cart"></i>
+                            <span id="textTop">CLICK FOR</span><br>
+                            <span id="textTop">ETSY LISTING</span>
+                        </div>
+                    </div>
+                        <br>
+                            <p id="littleText">✦ HONEY BADGER ✦</p>
+                </div>
+            </div></a>
+<!--NA3-->
+            <div class="col"> 
+                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
+                <div class="newArrivals" id="nA3">
                     <div class="overlay">
                         <div class = "items"></div>
                         <div class = "items head">
@@ -163,14 +190,14 @@
                             <p id="littleText">✦ ANDROMEDA ✦</p>
                 </div>
             </div></a>
-<!--NA3-->
+<!--NA4-->
             <div class="col"> 
-                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
-                <div class="newArrivals" id="nA3">
+            <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
+                <div class="newArrivals" id="nA4">
                     <div class="overlay">
                         <div class = "items"></div>
                         <div class = "items head">
-                            <h3>HONEY</h3>
+                            <h3>RIPARIAN</h3>
                                 <hr>
                         </div>
                         <div class = "items price">
@@ -184,84 +211,42 @@
                         </div>
                     </div>
                         <br>
-                            <p id="littleText">✦ HONEY ✦</p>
+                            <p id="littleText">✦ RIPARIAN ✦</p>
                 </div>
             </div></a>
-<!--NA4-->
-            <div class="col"> 
-            <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
-                <div class="newArrivals" id="nA4">
-                    <div class="overlay">
-                        <div class = "items"></div>
-                        <div class = "items head">
-                            <h3>ARBOREAL</h3>
-                                <hr>
-                        </div>
-                        <div class = "items price">
-                            <p class = "start"></p>
-                            <p class="new">$78</p>
-                        </div>
-                        <div class="items cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span id="textTop">CLICK FOR</span><br>
-                            <span id="textTop">ETSY LISTING</span>
-                        </div>
-                    </div>
-                        <br>
-                            <p id="littleText">✦ ARBOREAL ✦</p>
-                </div>
-            </div></a>
-<!--NA5-->       
-                <div class="col">        
-                <a href="https://www.etsy.com/shop/MATHIEKNITS/" target="_blank">
-                        <div class="newArrivals" id="nA5">
-                            <div class="overlay">
-                                <div class = "items"></div>
-                                <div class = "items head">
-                                    <h3>GINSENG</h3>
-                                        <hr>
-                                </div>
-                                <div class = "items price">
-                                    <p class = "start"></p>
-                                    <p class="new">$58</p>
-                                </div>
-                                <div class="items cart">
-                                    <i class="fa fa-shopping-cart"></i>
-                                    <span id="textTop">CLICK FOR</span><br>
-                                    <span id="textTop">ETSY LISTING</span>
-                                </div>
-                            </div>
-                            <br>
-                                <p id="littleText">✦ GINSENG ✦</p>
-                        </div>
-                </div></a>
+
         </div>
             <br>
             <hr id="new">
         </div>
     </div>
 
-<br>
+
 <!-- calendar -->
         <div class="container-fluid" id="calendar">
-            <br>
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
-                    <a href="https://detroiturbancraftfair.com/" target="_blank"><img src ="./img/unnamed.jpg"></a>
-                    <br>
-                    <br>
                     <h1>↠ EVENTS ↞</h1>
                         <hr id="eventHr">
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-5" id="calLeftCol">
+                <div class="row justify-content-center">
+                    <a href="https://detroiturbancraftfair.com/" target="_blank" ><img src ="./img/unnamed.jpg" id="ducf"></a>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
                     <p id="tentative">**CONFIRMED**</p>
+                    <br>
+                    <br>
                     <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
                     <br>
                 </div>
-                <div class="col-5" id="calRightCol" >
+                <div class="col-4" id="calRightCol" >
                     <p id="calHead"> PAST EVENTS </p><hr id="eventHr"><br>
                     <p id="datesOld">October 28, 2018 ↠  Chic & Unique Market ↠ Shelby Township MI</p>
                     <p id="datesOld">October 5/6, 2018 ↠ Stony Creek Fall For Nature Craft Show ↠ Stony Creek MetroPark</p>
@@ -271,7 +256,6 @@
             </div>
         <br>
     </div>
-<br>
 <br>
 
 <!-- shopBox -->
@@ -313,8 +297,8 @@
                                     <hr>
                             </div>
                             <div class = "items price">
-                                <p class = "start">STARTING FROM</p>
-                                <p class="new">$40</p>
+                                
+                                <p class="new">$78</p>
                             </div>
                             <div class="items cart">
                                 <i class="fa fa-shopping-cart"></i>
@@ -377,8 +361,10 @@
 <br>
 <br>
 
+
 <!-- subscribe -->
-    <div class="container-fluid" id="subscribeCont">
+<!--
+   <div class="container-fluid" id="subscribeCont">
             <br>
         <div class="container" id="subscribe">
             <div class="row justify-content-center">
@@ -397,6 +383,7 @@
         </div>
             <br>
     </div>
+-->
 
 <!-- footer -->
         <div class="container-fluid" id="footer">
