--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -66,6 +66,8 @@
             <li>
                 &nbsp;&nbsp;<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>&nbsp;&nbsp;
             </li>
+            <br>
+            <img src='./img/mklogoshadowdark.png' id="headerLogo">
         </ul>
     </div>
 </nav>
@@ -94,9 +96,13 @@
         <div class="row justify-content-center">
             <div class="container">
                 <div class="col justify-content-center" id="learnMoreBox">
-                    <h4>CALENDAR OF EVENTS</h4>
-                    <p>Sign up below for shop notifications!</p>
-                    <a href="./MKCalendar.html#subscribe"><button id="learnMoreBtn">SIGN ME UP!</button></a>
+                    <h4>STAY UP TO DATE!</h4>
+                    <p>Follow me on social media for updates!</p>
+                    <a href="https://www.mathieknits.etsy.com" target="_blank"><img src='./img/etsy.png' id="socialIcons"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://www.facebook.com/mathieknits" target="_blank"><img src='./img/facebook.png' id="socialIcons"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>
                 </div>
             </div>
         </div>
@@ -116,6 +122,7 @@
                 <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p>
                     <p id="tentative">**CONFIRMED**</p>
+                    <br>
                     <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
                 </div>
                 <div class="col-4" id="calRightCol" >
@@ -131,6 +138,7 @@
 <br>
 
 <!-- subscribe -->
+<!--
     <div class="container-fluid" id="subscribeCont">
             <br>
         <div class="container" id="subscribe">
@@ -150,6 +158,7 @@
         </div>
             <br>
     </div>
+-->
 
 <!-- footer -->
         <div class="container-fluid" id="footer">
