--- a/MKContact.html
+++ b/MKContact.html
@@ -66,6 +66,8 @@
             <li>
                 &nbsp;&nbsp;<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>&nbsp;&nbsp;
             </li>
+            <br>
+            <img src='./img/mklogoshadowdark.png' id="headerLogo">
         </ul>
     </div>
 </nav>
