--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -37,7 +37,6 @@
             </div>
 
             <div class="col-2 justify-content-center" id="topNavRight">
-                <a href="./Calendar.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
             </div>
         </div>
     </div>
@@ -96,7 +95,7 @@
         <div class="row justify-content-center">
             <div class="container">
                 <div class="col justify-content-center" id="learnMoreBox">
-                    <h4>STAY UP TO DATE!</h4>
+                    <h4>STAY UP TO DATE</h4>
                     <p>Follow me on social media for updates!</p>
                     <a href="https://www.mathieknits.etsy.com" target="_blank"><img src='./img/etsy.png' id="socialIcons"></a>
                     &nbsp;&nbsp;&nbsp;
@@ -113,27 +112,36 @@
         <div class="container-fluid" id="calendarBox">
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
+
                     <h1>↠ EVENTS ↞</h1>
-                    <br>
-                    <a href="https://detroiturbancraftfair.com/" target="_blank"><img src ="./img/unnamed.jpg"></a>
-               </div>
+                        <hr id="eventHr">
+                </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4" id="calLeftCol">
-                    <p id="calHead">UPCOMING EVENTS</p>
-                    <p id="tentative">**CONFIRMED**</p>
-                    <br>
-                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
-                </div>
-                <div class="col-4" id="calRightCol" >
-                    <p id="calHead"> PAST EVENTS </p>
-                    <br>
-                    <p id="datesOld">October 28, 2018 ↠ Unique Chic Market</p>
-                    <p id="datesOld">October 5/6, 2018 ↠ Stony Creek Fall For Nature Craft Show</p>
-                    <p id="datesOld">September 16, 2018 ↠ CRWC Crafts on the Clinton Beer & Craft Show</p>
+                <div class="row justify-content-center">
+                    <a href="https://detroiturbancraftfair.com/" target="_blank" ><img src ="./img/unnamed.jpg" id="ducf"></a>
                 </div>
             </div>
-        </div>
+            <br>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col-4" id="calLeftCol">
+                    <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
+                    <p id="tentative">**   NEXT WEEKEND!  **</p>
+                    <br>
+                    
+                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 <br> Detroit Urban Craft Fair <br> Masonic Temple, Detroit</a></p>
+                    <br>
+                </div>
+                <div class="col-4" id="calRightCol" >
+                    <p id="calHead"> PAST EVENTS </p><hr id="eventHr"><br>
+                    <p id="datesOld">October 28, 2018 ↠  Chic & Unique Market ↠ Shelby Township MI</p>
+                    <p id="datesOld">October 5/6, 2018 ↠ Stony Creek Fall For Nature Craft Show ↠ Stony Creek MetroPark</p>
+                    <p id="datesOld">September 16, 2018 ↠ CRWC Crafts on the Clinton Beer & Craft Show ↠ Yates Cider Mill</p>
+                    <br>
+                </div>
+            </div>
+        <br>
     </div>
 <br>
 
