--- a/MKShopMittens.html
+++ b/MKShopMittens.html
@@ -41,7 +41,6 @@
             </div>
 
             <div class="col-2 justify-content-center" id="topNavRight">
-                <a href="./MK.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
             </div>
         </div>
     </div>
@@ -171,7 +170,7 @@
         <div class="col justify-content-center" id="infoSide">
             <p id="itemTitle"> {{ productName }}</p>
 
-            <p id="itemMaterials">&nbsp;Madelinetosh<br>&nbsp;{{ materials }}</p>
+            <p id="itemMaterials">Madelinetosh<br>{{ materials }}</p>
 
             <p id="itemPrice">{{ price }}</p>
 
