--- a/MK.html
+++ b/MK.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="col-2 justify-content-center" id="topNavRight">
-                <a href="./MK.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
+                
             </div>
         </div>
     </div>
@@ -226,6 +226,7 @@
         <div class="container-fluid" id="calendar">
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
+                    <br>
                     <h1>↠ EVENTS ↞</h1>
                         <hr id="eventHr">
                 </div>
@@ -240,10 +241,10 @@
             <div class="row justify-content-center">
                 <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
-                    <p id="tentative">**CONFIRMED**</p>
+                    <p id="tentative">**   NEXT WEEKEND!  **</p>
                     <br>
-                    <br>
-                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</a></p>
+                    
+                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 <br> Detroit Urban Craft Fair <br> Masonic Temple, Detroit</a></p>
                     <br>
                 </div>
                 <div class="col-4" id="calRightCol" >
@@ -360,7 +361,8 @@
     </div>
 <br>
 <br>
-
+<br>
+<br>
 
 <!-- subscribe -->
 <!--
