--- a/MKHatsPortfolio.html
+++ b/MKHatsPortfolio.html
@@ -38,7 +38,6 @@
             </div>
 
             <div class="col-2 justify-content-center" id="topNavRight">
-                <a href="./MK.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
             </div>
         </div>
     </div>
@@ -95,7 +94,7 @@
         <div class="row justify-content-center">
             <div class="container">
                 <div class="col justify-content-center" id="learnMoreBox">
-                    <h6>↠ PREVIUSLY SOLD ↞</h6>
+                    <h6>↠ PREVOIUSLY SOLD ↞</h6>
                     <a href="./MKMittensPortfolio.html"><button id="learnMoreBtn">MITTENS</button></a>
                     <a href="./MKCowlsPortfolio.html"><button id="learnMoreBtn">COWLS</button></a>
                     <a href="./MKHatsPortfolio.html"><button id="learnMoreBtn">HATS</button></a>
