--- a/MKShopHats.html
+++ b/MKShopHats.html
@@ -163,11 +163,13 @@
                 <img v-bind:src="productImageC" v-on:click="changeToProductImageC()" id="smallImage">
                 <img v-bind:src="productImageD" v-on:click="changeToProductImageD()" id="smallImage">
             </div>
-        </div>
+        </div><br>
+        <p id="care"> {{care}} </p>
     </div>
 
         <div class="col justify-content-center">
             <p id="itemTitle"> {{ productName }}</p>
+            
 
             <p id="itemMaterials">Madelinetosh<br>{{ materials }}</p>
 
@@ -177,7 +179,7 @@
 
             <p id="size"> {{size}} </p>
 
-            <p id="care"> {{care}} </p>
+            
 
                 <button id="toEtsy" v-on:click="addToCart()">ADD TO CART</button>
         </div>
@@ -189,9 +191,6 @@
         </div>
     </div>
 </div>
-
-<br>
-<br>
 
 <!--take to prev/current button -->
     <div class="container">
