--- a/MKShopCowls.html
+++ b/MKShopCowls.html
@@ -166,7 +166,7 @@
                 <img v-bind:src="productImageD" v-on:click="changeToProductImageD()" id="smallImage">
             </div>
         </div><br>
-        <p id="care"> {{care}} </p>
+        <p id="careSmall"> {{care}} </p>
     </div>
 
         <div class="col justify-content-center">
@@ -181,7 +181,7 @@
 
             <p id="size"> {{size}} </p>
 
-            
+            <p id="careLarge"> {{care}} </p>
 
                 <button id="toEtsy" v-on:click="addToCart()">ADD TO CART</button>
         </div>
