--- a/MKAbout.html
+++ b/MKAbout.html
@@ -130,7 +130,7 @@
                     &emsp;I have been knitting for over 16 years. A drive to be creative, & encouragement from others who have received my items as gifts, has given me the confidence to open the MATHIEKNITS store as a part-time small business. I take pride in the items I create, have a keen sense for detail, and I meticulously choose colorways to represent my brand.
                 </p>
                 <p id="infoP">
-                    &emsp;All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, ecological terms. I exclusively use high quality merino wool in all of my garments & products. When purchasing knitwear, you should always check to see what it is made from! Not only do I only use the highest quality yarns in my products, I also only use yarn that is ethically sourced.
+                    &emsp;All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, or ecological terms. I exclusively use high quality merino wool in all of my garments & products. When purchasing knitwear, you should always check to see what it is made from! Not only do I only use the highest quality yarns in my products, I also only use yarn that is ethically sourced.
                 </p>
             </div>
         </div>
@@ -195,7 +195,7 @@
 
                 <div class="row justify-content-center" id="emRow">
             <p id="matsP">
-                    Merino wool isn't your average wool. It is a type of wool that comes from a particular breed of sheep, and is prized for its quality & softness.
+                    Merino wool isn't your average wool. It is a type of wool that comes from a particular breed of sheep, and is prized for its quality & softness. Seriously! It is so soft!
                     <br><br>
                 There are many benefits to choosing Merino wool, including:</p>
             </div>
@@ -211,7 +211,7 @@
                     ↠ SOFTNESS: The common reaction to wool can be a reminder of all things itchy, scratchy, uncomfortable, and too warm. Merino wool, on the other hand, is ultra-fine, giving it a soft quality.
                 </p>
                 <p id="infoP">
-                        ↠ ANTIBACTERIAL : Merino wool continues to be the superhero of wool with its antibacterial and water-repelling properties. This fiber can hold water without getting damp and it is a safe choice for germ laden environments. It is also naturally allergy-free.
+                        ↠ ANTIBACTERIAL : Merino wool continues to be the superhero of wool with its antibacterial and water-repelling properties. This fiber can hold water without getting damp and it is a safe choice for germ laden environments. It is also naturally allergy-free. YES! ALLERGRY-FREE!
                 </p>
                 <p id="infoP">
                     ↠ EASY TO MAINTAIN : Though Merino wool is a natural and renewable choice, it is also surprisingly simple to maintain. Most Merino wool garments and yarns are machine washable and can be tumble dried.
