--- a/MKAbout.html
+++ b/MKAbout.html
@@ -211,7 +211,7 @@
                     ↠ SOFTNESS: The common reaction to wool can be a reminder of all things itchy, scratchy, uncomfortable, and too warm. Merino wool, on the other hand, is ultra-fine, giving it a soft quality.
                 </p>
                 <p id="infoP">
-                        ↠ ANTIBACTERIAL : Merino wool continues to be the superhero of wool with its antibacterial and water-repelling properties. This fiber can hold water without getting damp and it is a safe choice for germ laden environments. It is also naturally allergy-free. YES! ALLERGRY-FREE!
+                        ↠ ANTIBACTERIAL : Merino wool continues to be the superhero of wool with its antibacterial and water-repelling properties. This fiber can hold water without getting damp and it is a safe choice for germ laden environments. It is also naturally allergy-free. YES! ALLERGY-FREE!
                 </p>
                 <p id="infoP">
                     ↠ EASY TO MAINTAIN : Though Merino wool is a natural and renewable choice, it is also surprisingly simple to maintain. Most Merino wool garments and yarns are machine washable and can be tumble dried.
