--- a/MK.html
+++ b/MK.html
@@ -241,7 +241,7 @@
             <div class="row justify-content-center">
                 <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
-                    <p id="tentative">**   NEXT WEEKEND!  **</p>
+                    <p id="tentative">**   THIS WEEKEND!  **</p>
                     <br>
                     
                     <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 <br> Detroit Urban Craft Fair <br> Masonic Temple, Detroit</a></p>
